<?xml version="1.0"?>
<package format="2">
    <name>xyzirt2xyzir</name>
    <version>0.0.0</version>
    <description> xyzirt2xyzir is a tool to convert point cloud data between different formats.</description>
    <url>https://github.com/MengWoods/xyzirt2xyzir</url>

    <author email="menghao.wu@alumni.aalto.fi">Menghao Wu</author>
    <maintainer email="menghao.wu@alumni.aalto.fi">Menghao Wu</maintainer>
    <license>Apache</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>roscpp</depend>
    <depend>cmake_modules</depend>
    <exec_depend>message_runtime</exec_depend>

</package>
